add warehouses endpoints
